--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "date-fns": "^2.30.0",
     "endent": "^2.1.0",
     "gpt-tokenizer": "^2.1.2",
+    "gsap": "^3.12.5",
     "i18next": "^23.7.16",
     "i18next-resources-to-backend": "^1.2.0",
     "langchain": "^0.0.213",
