--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "next-themes": "^0.2.1",
     "openai": "^4.23.0",
     "pdf-parse": "^1.1.1",
+    "posthog-js": "^1.170.1",
     "react": "^18",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18",
